k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gym-tracker
  labels:
    name: gym-tracker
