k8s/04-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-db
  namespace: gym-tracker
spec:
  serviceName: mongo-db
  replicas: 1
  selector:
    matchLabels:
      app: mongo-db
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      containers:
        - name: mongo
          image: mongo:5
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-db
  namespace: gym-tracker
spec:
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None 
  selector:
    app: mongo-db
