k8s/05-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gym-app
  namespace: gym-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gym-app
  template:
    metadata:
      labels:
        app: gym-app
    spec:
      containers:
        - name: backend
          image: martinjanevskii/workout-tracker-backend:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: gym-tracker
spec:
  selector:
    app: gym-app
  ports:
    - port: 8080
      targetPort: 8080
